...
  const isEdit = !!id;
  const disabled = useDisabled();

  return (
    <Form method="post" className="flex flex-col gap-6">
      <Input
        label="Title"
        name="title"
        defaultValue={title}
        placeholder="Enter update title"
        required
      />

...
